update peer dependencies

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-aos",
   "version": "0.0.1",
-  "description": "Animate on scroll library for Angular",
+  "description": "Animate on scroll directive library for Angular",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -9,12 +9,11 @@
   },
   "peerDependencies": {
     "@angular/core": ">=15.0.0 <21.0.0",
-    "@angular/animations": ">=15.0.0 <21.0.0",
-    "rxjs": ">=7"
+    "@angular/common": ">=15.0.0 <21.0.0"
   },
   "devDependencies": {
     "typescript": "^5.0.0",
     "@angular/core": "^20.0.0",
-    "@angular/animations": "^20.0.0"
+    "@angular/common": "^20.3.0"
   }
 }
