--- a/package.json
+++ b/package.json
@@ -1,12 +1,34 @@
 {
   "name": "ng-aos",
   "version": "0.0.1",
-  "description": "Animate on scroll directive library for Angular",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "description": "Animate on scroll directive for Angular",
+  "type": "module",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.json"
   },
+  "keywords": [
+    "angular",
+    "directive",
+    "animate-on-scroll",
+    "intersection-observer"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zobla-kv/ng-aos.git"
+  },
+  "homepage": "https://github.com/zobla-kv/ng-aos#readme",
   "peerDependencies": {
     "@angular/core": ">=15.0.0 <21.0.0",
     "@angular/common": ">=15.0.0 <21.0.0"
