add spa and ssr angular apps for testing published package

--- a/examples/spa-app/angular.json
+++ b/examples/spa-app/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "example": {
+    "spa-app": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -56,10 +56,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "example:build:production"
+              "buildTarget": "spa-app:build:production"
             },
             "development": {
-              "buildTarget": "example:build:development"
+              "buildTarget": "spa-app:build:development"
             }
           },
           "defaultConfiguration": "development"
